examples/test/testpolicy12862.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12862
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key39: value34
      key21: value32
      key42: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value6
          key9: value3
          key30: value14
      podSelector:
        matchLabels:
          key7: value2
